--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="contaier">
     <div class="menyu">
         <ul class="menyu-s">
-            <li class="menyu-xs"><img class="menyu-img" src="img/ロゴ 2.jpg" alt="logo"　width="40px" height="40px"></li>
+            <li class="menyu-xs"><img class="menyu-img" src="ロゴ 2.jpg" alt="logo"　width="40px" height="40px"></li>
             <li class="menyu-xs"><a class="menyu-li-m" href="#">概要</a></li>
             <li class="menyu-xs"><a class="menyu-li" href="#">準備</a></li>
             <li class="menyu-xs"><a class="menyu-li" href="#">安全</a></li>
@@ -23,7 +23,7 @@
 
     <div class="article">
         <div class="article-img">
-            <img class="img-art" src="img/9dda5626-56fe-45e6-9c21-95454f019ae4.jpg" >
+            <img class="img-art" src="9dda5626-56fe-45e6-9c21-95454f019ae4.jpg" >
         
 
         <div class="otoi">
